<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="leaderboard">LEADERBOARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint8o0u" />
    <string name="email_hint">Email Address</string>
    <string name="project_link_hint">Project on GitHub (link)</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="skill_badge_description">Top Skill IQ Badge</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="submit_success_dialog_message">Submission Successful</string>
    <string name="submit_failure_dialog_message">Submission Not Successful</string>
</resources>